Arguement checks for Server